src/Home.css
/* styles.css */
body {
  margin: 0;
  padding: 0;
  background-color: #f7f5eb;
  font-family: "Chalkboard SE", sans-serif;
}

.container {
  width: 99%;
  display: flex;
  flex-direction: row;
  overflow-y: auto;
}

.header {
  position: relative;
  top: 0px;
  background-color: #d5e3e8;
  padding: 10px 20px;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  border-radius: 10px;
  border: 2px solid #2c3e50;
}

.header,
h1 {
  padding-left: 2%;
  width: 90%;
}

.toggle-btn {
  background-color: #60b7d6;
  color: azure;
  padding: 10px 20px;
  cursor: pointer;
  top: 20px;
  left: 20px;
  z-index: 1;
  border-radius: 10px;
  border: 2px solid #2c3e50;
}
.bar1,
.bar2,
.bar3 {
  width: 35px;
  height: 5px;
  background-color: #2c3e50;
  margin: 6px 0;
  transition: 0.4s;
  border-radius: 5px;
}

.change .bar1 {
  transform: translate(0, 11px) rotate(-45deg);
}

.change .bar2 {
  opacity: 0;
}

.change .bar3 {
  transform: translate(0, -11px) rotate(45deg);
}

/* Fridge Icon */
.fridge-icon {
  width: 30%;
  height: 80%;
  background-color: #ffffff;
  border: 2px solid #000000;
  border-radius: 10px;
  position: relative;
}

.fridge-icon:before {
  content: "";
  position: absolute;
  top: 40%;
  left: 50%;
  transform: translateX(-50%);
  width: 100%;
  height: 2%;
  background-color: #000000;
}
/* end Fridge Icon */
/* Freezer Icon */
.freezer-icon {
  width: 50%;
  height: 60%;
  background-color: #ffffff;
  border: 2px solid #000000;
  border-radius: 10px;
  position: relative;
}

.freezer-icon:before {
  content: "";
  position: absolute;
  top: 30%;
  left: 50%;
  transform: translateX(-50%);
  width: 100%;
  height: 2%;
  background-color: #000000;
}
/* end Freezer Icon */

.sidebar {
  background-color: #ffed86;
  min-width: 150px;
  transition: transform 0.3s ease-in-out;
  transform: translateX(-100%);
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  overflow-y: auto; /* Use 'auto' instead of 'scroll' */
  border-right: 2px solid #2c3e50;
}

.sidebar.show {
  transform: translateX(0);
}

.sidebar-card {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-content: center;
  width: 80%;
  height: 120px;
  margin: 10%;
  background-color: #e9c43c;
  border-radius: 25px;
  border: 2px solid #2c3e50;
}

.sidebar-card-title {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  width: auto;
  height: 20%;
  bottom: auto;
  border: #161515;
}

.sidebar-card-text {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  width: 100%;
  height: 60%;
  font-size: small;
}

.sidebar-card-footer {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 20%;
  font-size: small;
}

.main-content {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  margin-left: -150px;
  padding: 2%;
  overflow-y: auto;
  transition: margin-left 0.3s ease-in-out;
}

.main-content.show {
  margin-left: 0px; /* Show the content beside the side panel */
}

.main-card-container {
  display: flex;
  flex-direction: column;
  align-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.main-card-header {
  width: 100%;
  height: 100%;
  background-color: #f6a367;
  border-radius: 25px;
  border: 2px solid #2c3e50;
  z-index: 1;
}

.main-card-title {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  border: #161515;
  font-size: large;
}

.main-card-text-container {
  margin-top: -5%;
  width: 95%;
  height: 95%;
  background-color: #f7d9c4;
  border-bottom-left-radius: 25px;
  border-bottom-right-radius: 25px;
  border: 2px solid #2c3e50;
}

.main-card-text {
  justify-content: center;
  align-items: start;
  padding-top: 5%;
  width: 95%;
  height: 100%;
  font-size: small;
}

.main-card-footer {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 20%;
  font-size: small;
}

.create-item-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  /* margin-left: -150px; */
  padding: 2%;
  overflow-y: auto;
  /* transition: margin-left 0.3s ease-in-out; */
}

